--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,7 @@ uuid = "0f1713cb-956e-483c-a7b8-fc2c0b487a2b"
 version = "0.1.0"
 
 [deps]
+Clang = "40e3b903-d033-50b4-a0cc-940c62c95e31"
 Libdl = "8f399da3-3557-5675-b5ff-fb832c97cbdb"
 MathOptInterface = "b8f27783-ece8-5eb3-8dc8-9495eed66fee"
 
