--- a/Project.toml
+++ b/Project.toml
@@ -8,6 +8,7 @@ MathOptInterface = "b8f27783-ece8-5eb3-8dc8-9495eed66fee"
 SCIP_jll = "e5ac4fe4-a920-5659-9bf8-f9f73e9e79ce"
 
 [compat]
+MathOptInterface = "1"
 julia = "1"
 
 [extras]
